fixing visibility issues

--- a/webapp/vertical-timeline/css/style.css
+++ b/webapp/vertical-timeline/css/style.css
@@ -245,13 +245,13 @@ header h1 {
     height: 60px;
     left: 50%;
     margin-left: -30px;
-    /* Force Hardware Acceleration in WebKit */
+    /* Force Hardware Acceleration in WebKit*/ 
     -webkit-transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
+    /*-webkit-backface-visibility: hidden;*/
   }
-  .cssanimations .cd-timeline-img.is-hidden {
+  /*.cssanimations .cd-timeline-img.is-hidden {
     visibility: hidden;
-  }
+  }*/
   .cssanimations .cd-timeline-img.bounce-in {
     visibility: visible;
     -webkit-animation: cd-bounce-1 0.6s;
@@ -424,9 +424,9 @@ header h1 {
     right: 122%;
     text-align: right;
   }
-  .cssanimations .cd-timeline-content.is-hidden {
+  /*.cssanimations .cd-timeline-content.is-hidden {
     visibility: hidden;
-  }
+  }*/
   .cssanimations .cd-timeline-content.bounce-in {
     visibility: visible;
     -webkit-animation: cd-bounce-2 0.6s;
